--- a/Frequentist-Bayes/Frequentist-Bayes.Rmd
+++ b/Frequentist-Bayes/Frequentist-Bayes.Rmd
@@ -4,9 +4,6 @@ author: "Michael Hunt"
 date: "January 27, 2016"
 output: html_document
 bibliography: bibliography.bib
-
-
-
 ---
 
 
@@ -249,17 +246,21 @@ For example, suppose, as we have here, that our alternate hypothesis is that som
 
 In reality, the false positive rate for a real test would likely be greater than that, so that the posterior odds for a rare condition, while greater than the prior odds, could still be much less than one, despite a positive result. 
 
-If this seems counter intutive, consider the case of breast cancer among women in their forties, and the question of whether to routinely screen for this using mammograms. The prevalence of this condition among this group is about 1.4 %, so that the prior odds for beast cancer among this group would be $\frac{0.014}{0.986}=0.014$. The specificty of a mammogram is about 0.9 - that is, if a woman does not have breast cancer, then a mammogram will incorrectly claim that she does about 10% of the time. On the other had, if she does have breast cancer, a mammogram will correctly show this about 75% of the time, so that the sensitivity or power of the test is 0.75. Thus the Bayes Factor in this case is $\frac{0.75}{0.1}=7.5$. The posterior odds, therefore, given a postive test result are $7.5\times0.014=0.10$ - about 10%. [@Silver2013]
+If this seems counter intutive, consider the case of breast cancer among women in their forties, and the question of whether to routinely screen for this using mammograms. The prevalence of this condition among this group is about 1.4 %, so that the prior odds for breast cancer among them would be $\frac{0.014}{0.986}=0.014$. The specificity of a mammogram is about 0.9 - that is, if a woman does not have breast cancer, then a mammogram will incorrectly claim that she does about 10% of the time. On the other had, if she does have breast cancer, a mammogram will correctly show this about 75% of the time, so that the sensitivity or power of the test is 0.75. Thus the Bayes Factor in this case is $\frac{0.75}{0.1}=7.5$. The posterior odds, therefore, given a postive test result are $7.5\times0.014=0.10$ - about 10%. [@Silver2013]  
+
+Thus, the vast majority of women in this age group who test positive for breast cancer do not actually have it. This is why many doctors have argued that routine mammograms should not be carried out on this group, but should be for older women,among whom the prevalence of breast cancer is higher, so that the false positive rate would be lower. 
 
 If one other hand, the disease is much more prevalent, with a prior odds of 0.5, say, then the Bayes Factor only needs to be equal to 2 or more for evens or better posterior odds, so that, if the power of our test is again 0.8, we could achieve this despite a much higher false positive rate of 0.4. 
 
 ### Are most published research results wrong?
-This is the startling claim made by medical researcher John Ioannidis in his 2005 paper "Why Most Published Research Findings are False" [@Ioannidis2005]. The analysis by which he arrives at this claim follows, broadly the steps taken above, and thus his calim is in fact that the posterior odds of most published results are less than one. This is the result, he suggests, of researchers operating in fields where the prior odds are low, and often, in addition, because experiments are corried out even though they have low power.
+This is the startling claim made by medical researcher John Ioannidis in his 2005 paper "Why Most Published Research Findings are False" [-@Ioannidis2005]. The analysis by which he arrives at this claim follows, broadly the steps taken above, and thus his claim is in fact that the posterior odds of most published results are less than one. This is the result, he suggests, of researchers operating in fields where the prior odds are low, and often, in addition, because experiments have been carried out even though they have low power.
 
-His result has been contested, for example by Jeff Leek 
+His result has been contested, for example by Jager and Leek [-@Jager2013] and is part of a wider debate that has been going on for some time concerning over reliance on, or misuse of significance testing. See for example Cohen [-@CohenJacob1994] for an entertaining title and a lucid discussion of the issue, but also, for example, Leek and Irizarry [-@Leek2012] for an informal and  spirited defence of the utility of p-values.
 
 ### Extraordinary Claims Require Extraordinary Evidence
 
 This is an oft repeated phrase, but we can understand it in terms of the framework we have developed here. Suppose I do an experiment and claim, on the basis of my results, to have found evidence for astrology, homeopathy, extra sensory perception or such-like. The scientific community could reasonably ask, given my result, how much more likely is it that my claim is correct than that it is wrong. Or, alternatively, if these posterior odds are to be evens or better, how great the Bayes Factor of my experiment would need to be. Now the answer to that, we have seen, is that it should be the inverse of my prior odds. If these are tiny, then my Bayes factor needs to be huge.  A few back of the envelope calculations suffices to show that, if Newtonian mechanics is correct, the claims of astrology are, indeed, extraordinary. A vast web of interconnected ideas for which there is overwhelming evidence would have to be wrong if the astrological claims were to be right. Thus the prior odds are tiny, and so the Bayes Factor of my test needs to be huge if my result, claiming to have detected a real astrological effect, is to be at all credible. My extraordinary claim would require extraordinary evidence for there to be an evens chance of it being correct. 
+
+To put numbers to this, soppose I were to calim ( as )
 
 ### References
