--- a/Frequentist-Bayes/Frequentist-Bayes.Rmd
+++ b/Frequentist-Bayes/Frequentist-Bayes.Rmd
@@ -18,13 +18,12 @@ MathJax.Hub.Config({
 });
 </script>
 
-showAnswers=TRUE
 
 ```{r setup,include=FALSE}
 rm(list=ls()) ### To clear namespace
 library(knitr)
 library(crayon)
-knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs/',include=TRUE,echo=FALSE, warning=FALSE, message=FALSE,showAnswers=TRUE,results= 'asis')
+knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs/',include=FALSE,echo=FALSE, warning=FALSE, message=FALSE,showAnswers=TRUE,results= 'asis')
 ```
 
 ```{r}
@@ -106,7 +105,7 @@ cat(
 ```
 
 ```{r}
-cat("<b>A</b>",qcount,": 2. The probability of getting a positive test result given that the person actually has the condition\n",sep="")
+cat("<b>A</b>",qcount,": 2. The probability of getting a positive test result _given_ that the person actually has the condition\n",sep="")
 ```
 
 ***
@@ -128,7 +127,7 @@ cat("<b>A</b>",qcount,":\n
 2. $P(+|\\bar{A})$ = 1 - specificity = 0.04\n  
 3. $P(-|A)$ = 1 - sensitivity = 0.2\n  
 4. $P(-|\\bar{A})$ = specificity = 0.96\n
-    ",sep="")
+",sep="")
 ```
 
 ***
@@ -144,9 +143,6 @@ cat(
 ",sep="")
 ```
 
-
-***
-
 ```{r}
 cat(
 "<b>A</b>",qcount,":\n
@@ -159,83 +155,242 @@ cat(
 
 ***
 
-__Q7__ What is the power of the test  in terms of the Type II error rate $\beta$?
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": What is the power of the test  in terms of the Type II error rate $\\beta$?:\n
+",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,":
+If you have the disease, then you must either test positive or negative. The probability that you test negative, which would be an error (there was an effect and the test missed it), is what we call $\\beta$, the Type II error rate. Thus the probability that you have the disease and test positive (there was an effect and the test detected it) is $1-\\beta$, since the two probabilities have to add up to one.
+",sep="")
+```
 
 ***
 
-__Q8__ Complete the tree diagram below with all of the terms and numbers used so far.
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": Complete the tree diagram below with all of the terms and numbers used so far:\n
+",sep="")
+```
+***
 
  ![](tree.png)
 
-***
 
 In the example shown, think of $P(+|\bar{A})$)  as the probability that someone follows the $+$ branch, given that they have already followed the $\bar{A}$ branch.
 
-__Q8__ If a random person walks into a clinic they may or may not have the condition A, and if they are tested, the outcome may or may not be positive. So there  are four possible outcomes, corresponding to the four branches of the tree diagram:
+***
+
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": If a random person walks into a clinic they may or may not have the condition A, and if they are tested, the outcome may or may not be positive. So there  are four possible outcomes, corresponding to the four branches of the tree diagram:
 
 Assign each of these outcomes to the correct number row on the right in the diagram above
 
 
 Outcome | Final branch of tree diagram
 --|--
-A person is healthy AND tests positive ||
-A person is healthy AND tests negative ||
-A person is ill AND tests positive ||
-A person is ill AND tests negative ||
+1. A person is healthy AND tests positive ||
+2. A person is healthy AND tests negative ||
+3. A person is ill AND tests positive ||
+4. A person is ill AND tests negative ||:\n
+",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,":
+1. 3; 2. 4; 3. 1; 4. 2
+",sep="")
+```
 
 ***
 
-__Q9__ In hypothesis testing, in the frequentist approach, all we have after a test is the outcome of the test itself, and any knowledge we have as to the efficacy of the test. Suppose after testing an individual we get a positive result. and we claim that we have a _p_-value that is below our chosen significance threshold of 0.05, so that we have, we claim, a "statistically significant" result.
+#### p-values
+In hypothesis testing, in the frequentist approach, all we have after a test is the outcome of the test itself, and any knowledge we have as to the efficacy of the test. Suppose after testing an individual we get a positive result. Given a specificity of greater than 95%, as here, we might claim that we have a _p_-value that is below our chosen significance threshold of 0.05, so that we have, we might claim, a "statistically significant" result.
 
 Remember that _p_ values tell us the probability that we would have got a particular experimental result given that the null hypothesis is true.
 
-__Q10__ What would be an appropriate null hypothesis in this case?
+***
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": What would be an appropriate null hypothesis in this case?
+",sep="")
+```
 
-__Q11__ This _p_-value, as usually defined, would tell us which of these probabilities:
+```{r}
+cat(
+"<b>A</b>",qcount,": The person does not have the disease (the 'there is nothing going on' scenario)\n
+",sep="")
+```
 
-* The probability that the person had the condition, given the positive result
-* The probability that they were healthy, given the positive result
-* The probability that we would have got this positive result, if they were healthy
-* The probability that we would have got this positive result if they had the condition
+***
 
-__Q12__ Given the numbers above, what is the p-value for a positive test result, given that the person has the disease?
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": This _p_-value, as usually defined, would tell us which of these probabilities:
+
+1. The probability that the person had the condition, given the positive result
+2. The probability that they were healthy, given the positive result
+3. The probability that we would have got this positive result, if they were healthy
+4. The probability that we would have got this positive result if they had the condition
+",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,": The p-value is the probability of getting the result, given that the null hypothesis is true, so the answer is 3. The probability that we would have got this positive result, if they were healthy\n
+",sep="")
+```
+
+***
+
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": Given the numbers above, what is the p-value for a positive test result, given that the person does not have the disease?
+",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,": It is 1- specificity = 1 - 0.96 = 0.04 in this case. This is $\\beta$, the Type II error rate, often called the False Positive Rate.
+",sep="")
+```
+
+***
   
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": Of the options listed in Q",qcount-2,", which results are really of most interest?
+",sep="")
+```
 
-__Q13__ Of the options listed in Q11, which is the result that is really of interest?
-  
-  
-Let us try to calculate this result. To do this, we will calculate the probabilities of each of the four possible outcomes:
+```{r}
+cat(
+"<b>A</b>",qcount,": it depends what you are interested in, you might argue, but since the data themselves are only of interest in that they tell us something about reality, we could make the case that what we really want to know is,: given this test result, what is the probabilitiy that the patient is healthy or diseased? This is the inverse of what a p-value tells us, which is: given the truth of a hypothesis (usually the null hypothesis, how likely are these data?
 
-__Q14__ Calculate the probabilites of each of the outcomes 1 to 4, given a randomly selected individual who has not yet been tested.  
+So, if I have just tested positive for some awful disease A, I want to know whether I really have it: it is $P(A|+)$ that is of real interest. More generally, if we get some unusual data in an experiment, significance testing will tell us how likely these data would be given the truth of the null hypothesis, $P(+|\\bar{A})$, but what we might really want to know is the inverse of this: how likely is it that the null/alternate  hypotheses are true, given the data, $P(\\bar{A}|+)$ or $P(A|+)$: 
+",sep="")
+```
+
+***
+
+Let us try to calculate this result. To do this $P(A|+)$, we will calculate the probabilities of each of the four possible outcomes in the tree diagram:
+
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": Calculate the probabilites of each of the outcomes 1 to 4, given a randomly selected individual who has not yet been tested.  
 In doing this you will be using the result: 
   
-$\mathrm{Probability\ of\ A\ AND\ B} = P (A \cap B) = P(A|B) \times P(B) = P(B|A) \times P(A)$  
+$\\mathrm{Probability\\ of\\ A\\ AND\\ B} = P (A \\cap B) = P(A|B) \\times P(B) = P(B|A) \\times P(A)$  
   
-For, example, the probability of outcome 1 is the probability that someone has the condition AND that they have tested positive: This probability is the product of the probabilities of the two successive choices that were made in the journey along the tree from left to right. 
+For, example, the probability of outcome 1 is the probability that someone has the condition AND that they have tested positive: This probability is the product of the probabilities of the two successive choices that were made in the journey along that branch of the tree from left to right. 
 
-$P(1) = P(A \cap +) = P(A) × P(+|A) = 0.01 ×\times 0.8 = 0.008$ 
+$P(1) = P(A \\cap +) = P(A) \\times P(+|A) = 0.01 \\times 0.8 = 0.008$, 
   
 $P(2) =$ 
   
 $P(3) =$  
   
 $P(4) =$  
+",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,":\n 
+$P(2) = P(A \\cap -) = P(A) \\times P(-|A) = 0.01 \\times 0.2 = 0.002$ 
   
-__Q15__ Check that $P(1) + P(2) + P(3) + P(4) = 1$.  
+$P(3) = P(\\bar{A} \\cap +) = P(\\bar{A}) \\times P(+|\\bar{A}) = 0.99 \\times 0.96 = 0.9504$  
+  
+$P(4) = P(\\bar{A} \\cap -) = P(\\bar{A}) \\times P(-|\\bar{A}) = 0.99 \\times 0.04 = 0.0396$ 
+",sep="")
+```
+
+***
+
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": Check that $P(1) + P(2) + P(3) + P(4) = 1$.  
 Why must this be the case?
+",sep="")
+```
 
-__Q16__ What is the probability $P(+)$ of getting a positive result, regardless of whether the person is healthy or has the condition?
-(Hint: this is the sum of two of the outcomes you calculate in Q14.)
+```{r}
+cat(
+"<b>A</b>",qcount,":The four braches 1...4 are the only possible outcomes. hence the probabilities that a patient ends up in one of them have to sum to one.
+",sep="")
+```
 
-__Q17__ From the numbers you have already calculated, find the probability $P(A|+)$ that someone who has tested positive does have the condition. This is the same as asking "what proportion of those who test positive actually have the condition?"
-(Hint: you can find this using the two values that you used in Q16)
+***
 
-__Q18__ This probability, $P(A|+)$ is a __Bayesian__ result. It can be expressed in the form:
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": What is the probability $P(+)$ of getting a positive result, regardless of whether the person is healthy or has the condition?
+(Hint: this is the sum of two of the outcomes you calculate in Q
+",qcount-2,")",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,": $P(+) = P(1) + P(3)= 0.008 + 0.9504 = 0.9584$
+",sep="")
+```
+
+***
+
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": From the numbers you have already calculated, find the probability $P(A|+)$ that someone who has tested positive does have the condition. This is the same as asking 'what proportion of those who test positive actually have the condition?'
+(Hint: you can find this using the two values that you used in Q
+",qcount-3,").",sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,": $P(A|+) = \\dfrac{P(1)}{P(1)+P(3)} = \\dfrac{0.008}{0.008 + 0.9504}= 0.0084$
+",sep="")
+```
+
+***
+
+This is what we wanted! This is the interesting result P(+|A). Not that to calculate it we had to use not only data from our experiment, but also prior knowledge, in this case the prevalence of the disease. Note too that despite a positive test result, the probability the result is correct ie that a real effect has been detected, is still very low. In this case, that is largely becuase the prevalence of the disease is so low, and so most people who are tested are healthy, and the small proportion of errors made in testing them, giving positive test results, outweigh the high proportion of positive results on the very small number of people who actually have the disease.
+
+***
+
+```{r,include = TRUE}
+qcount=qcount+1
+cat(
+"<b>Q</b>",qcount,": This probability, $P(A|+)$ is a __Bayesian__ result. It can be expressed in the form:
 
 
-$$P(A|+)=\dfrac{P(+|A)\cdot P(A)}{P(+)}$$
+$$P(A|+)=\\dfrac{P(+|A)\\times P(A)}{P(+)}$$
 
-We know all the terms on the right hand side of this equation. Use these values to calculate $P(A|+)$ and check that it agrees with your result from Q17
+We know all the terms on the right hand side of this equation. Use these values to calculate $P(A|+)$ and check that it agrees with your result from Q
+",qcount-1,sep="")
+```
+
+```{r}
+cat(
+"<b>A</b>",qcount,": $$P(A|+)=\\dfrac{P(+|A)\\cdot P(A)}{P(+)}=\\dfrac{0.008\\times 0.01}{0.9504}=0.0084$$
+",sep="")
+```
+
+***
 
 This true positive (TP) result is arguably a more interesting result than the p-value in that it tells us about the probability of our hypothesis (A, that the person has the condition) given an experimental result (+, that the test had a positive outcome), rather than about the probability of a set of data, given a hypothesis.  
 
@@ -248,7 +403,7 @@ One could argue that this inclusion of prior knowledge is both a strength and a 
 More generally, however, $P(A)$ might be taken to represent the likelihood we assign to the probability that some prior condition is true. Two researchers might disagree about this. They might use their knowledge of the field, of mechanisms, of the number of supporting results and so on. However the value of $P(A)$ might be a judgement, or at least involve some element of subjective judgement, and that is why many, those in the frequentist camp, might object to the Bayesian approach.
 
 
-__Q17__ Are you surprised at the low value of $P(A|+)$? We had a test with high power (0.8) and yet, despite a positive result, it emerges that the person is still much more likely not to have the disease than to have it. More generally, you can think of this as being an example of where we have done an experiment, with high power, detected an effect, and yet it is much more likely than not, despite this, that there is in fact no real effect.
+Are you surprised at the low value of $P(A|+)$? We had a test with high power (0.8) and yet, despite a positive result, it emerges that the person is still much more likely not to have the disease than to have it. More generally, you can think of this as being an example of where we have done an experiment, with high power, detected an effect, and yet it is much more likely than not, despite this, that there is in fact no real effect.
 
 Why is this?  
   
